--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 
         <body class="text-center">
         <form action="/login" method="post" class="form-signin">
+        <img class="mb-4" src="../resources/1.jpg" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
             <label for="uname" class="sr-only">Username</label>
             <input
