Fixed the CSS for all the layouts &About page
Fixed the CSS to not look weird on all the pages. They all should be centered now and I worked on the About page.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -18,8 +18,9 @@
                         <h2 class="title text-center">About US</h2>
                         <p class="title text-center"> About us
                             SmartBoss was Founded in January 2020 and is based in North Carolina. Smartboss is an app that helps other company’s make their life easy by taking away the stress of schedule and allowing are Smartboss app to do it for you. We are an organization that has developed an app that will change the way scheduling is made forever.</p>
-                        <h3 class="title text-center">Our Mission</h3>
-                        <p class="title text-center"> Our Mission is schedule people automatically.</p>
+                        
+                            <h3 class="title text-center">Our Mission</h3>
+                        <p class="title text-center"> Out mission is to help fix the way scheduling is made for Small business and volunteer work. We want to change the way scheduling works by making it to where the employee can pick their own time and days. Making it less stressful for the employer. We make it are goal to help gather a working schedule from the employee without you having to decide their days. This will give them time in their life so they can do personal needs. This doesn’t just help out the employer but the Employee.</p>
 	    			</div>
                     <div class="product-information"><!--/about-us-information-->
                     <h3 class="title text-center">Know More About US</h3>
