--- a/views/help.ejs
+++ b/views/help.ejs
@@ -8,6 +8,7 @@
 <body>
 <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->   
     <%- include('includes/nav.ejs') %>
+    <div class="a">
 
 	  <div id="contact-page" class="container">
     	<p>
