--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,7 @@
                 Employer<br />
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <a href="/signup">New? Sign up here<a>
         </form>
     </body>
 </html>
