--- a/views/help.ejs
+++ b/views/help.ejs
@@ -12,7 +12,8 @@
 
 	  <div id="contact-page" class="container">
     	<p>
-            If you want a summary about what this website is about, click on the home tab. The home page will allow you to either sign up or sign in. If you want to know more about this website and its creaters, click on the "About Us" tab. 
+            If you want a summary about what this website is about, click on the home tab. The home page will allow you to either sign up or sign in. If you want to know more about this website and its creaters, click on the "About Us" tab.
+            at this time we are still working on the help Page. 
         </p>  
     	</div>	
     </div>
