--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,39 +12,25 @@
     <%- include('includes/nav.ejs') %>    
 
     <main>
-        <section id="login">
-            <h1>Signup</h1>
-            <h4><%= data %></h4>
+        <div class="form-group">
+            <legend>Sign Up</legend>
             <form action='/signup' method='post'>
-                <div>
-                    <label for="name">Full Name:</label>
-                    <input type="text" id="name" name="name" required></br>
-                </div>
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required></br>
-                </div>
-                <div>
-                    <label for="username">Username:</label>
-                    <input type="text" id="uname" name="uname" required></br>
-                </div>
-                <div>
-                    <label for="pass">Password:</label>
-                    <input type="password" id="pass" name="pass" required></br>
-                </div>
-                <div>
-                    <label for="rtpass">Repeat Password:</label>
-                    <input type="password" id="rtpass" name="rtpass" required></br>
-                </div>
-                <div>
-                    <input type='radio' id="employee" name="signupcheck" value="employee" checked> Employee<br>
-                    <input type='radio' id="employer" name="signupcheck" value="employer"> Employer<br>
-                </div>
-                <div>
-                    <button type="submit">Signup</button></br>
-                </div>
+                    <input type="text" class='form-control' id="name" name="name" placeholder='Fulle Name' required></br>
+                    <input type="email" class='form-control' id="email" name="email" placeholder='Email' required></br>
+                    <input type="text" class='form-control' id="uname" name="uname" placeholder='UserName' required></br>
+                    <input type="password" class='form-control' id="pass" name="pass" placeholder='Password' required></br>
+                    <input type="password" class='form-control' id="rtpass" name="rtpass" placeholder='Repeat Password'required></br>
+                    <div class="radio mb-3">
+                        <label class="radio-inline">
+                            <input type='radio' id="employee" name="signupcheck" value="employee" checked> Employee<br>
+                        </label>
+                        <label class="radio-inline">
+                            <input type='radio' id="employer" name="signupcheck" value="employer"> Employer<br>
+                        </label>
+                        </div>
+                    <button class='btn btn-lg btn-primary btn-block' type="submit">Signup</button></br>
             </form>
-        </section>
+        </div>
     </main>
     <footer id="footer">
     </footer>
