--- a/views/groupPage.ejs
+++ b/views/groupPage.ejs
@@ -8,6 +8,7 @@
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
         <%- include('includes/nav.ejs') %>
+        <div class="a">
 
         <main>
             <h1>Smart Boss</h1>
@@ -35,5 +36,6 @@
             <% } %>
         </main>
         <footer id="footer"></footer>
+    </div>
     </body>
 </html>
