--- a/views/includes/employeeLeft.ejs
+++ b/views/includes/employeeLeft.ejs
@@ -7,6 +7,8 @@
     <!--/body-->
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
+        <div class="a">
+
         <main>
             <h3>Skills</h3>
             <% if(skills.length < 1) { %>
@@ -26,5 +28,6 @@
             <% } %>
         </main>
         <footer id="footer"></footer>
+        </div>
     </body>
 </html>
