--- a/views/includes/employeeRight.ejs
+++ b/views/includes/employeeRight.ejs
@@ -7,6 +7,7 @@
     <!--/body-->
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
+        <div class="a">
 
         <main>
             <h3>Hours</h3>
@@ -79,5 +80,6 @@
             </ol>
         </main>
         <footer id="footer"></footer>
+        </div>
     </body>
 </html>
