--- a/views/skillPage.ejs
+++ b/views/skillPage.ejs
@@ -5,6 +5,8 @@
         <%- include('includes/head.ejs') %>
     </head>
     <!--/body-->
+    <div class="a">
+
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
         <%- include('includes/nav.ejs') %>
@@ -32,4 +34,5 @@
         </main>
         <footer id="footer"></footer>
     </body>
+    </div>
 </html>
