--- a/views/includes/employeeRight.ejs
+++ b/views/includes/employeeRight.ejs
@@ -7,20 +7,16 @@
     <!--/body-->
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
-        <div class="a">
-
         <main>
             <h3>Hours</h3>
             <% const dayAvail = ["monAvail","tueAvail", "wedAvail","thAvail", "friAvail","satAvail","sunAvail"]; %>
-            <ol>
                 <form action="/employee/group/availability" method="post">
                 <% for(var i = 0; i < 7; i++) {%>
                 <%var day = dayAvail[i]%>
-                    <li>
                         <label for="<% dayAvail[i] %>Start ">
                             <span>Monday:</span>
                             <%const val = employee[dayAvail[i]]%>
-                            <select id="<%dayAvail[i]%>HoursStart" selected='<%- employee[dayAvail[i]][0] %>' name='<%dayAvail[i]%>HoursStart' >
+                            <select  id="<%dayAvail[i]%>HoursStart" selected='<%- employee[dayAvail[i]][0] %>' name='<%dayAvail[i]%>HoursStart' >
                                 <option value="0" <%= (val[0] == 0)?'selected':'' %>>12</option>
                                 <option value="1" <%= (val[0] == 1)?'selected':'' %>>1</option>
                                 <option value="2" <%= (val[0] == 2)?'selected':'' %>>2</option>
@@ -45,7 +41,7 @@
                                 <option value="0" <%= (val[2] == 0)?'selected':'' %>>AM</option>
                                 <option value="1" <%= (val[2] == 1)?'selected':'' %>>PM</option>
                             </select>
-                            <h3> TO </h3>
+                            <span> TO </span>
                             <label for="<%dayAvail[i]%>End">
                             <select id="<%dayAvail[i]%>HoursEnd" selected='<% employee[dayAvail[i]][3] %>' name="<%dayAvail[i]%>HoursEnd">
                                 <option value="0" <%= (val[3] == 0)?'selected':'' %>>12</option>
@@ -73,11 +69,11 @@
                                 <option value="1" <%= (val[5] == 1)?'selected':'' %>>PM</option>
                             </select>
                         </label>
-                    </li>
                     <% } %>
-                   <button>Update Availability</button> 
+                    <div id='updateAvailability'>
+                        <button class="btn btn-lg btn-primary " >Update Availability</button> 
+                    </div>
                 </form>
-            </ol>
         </main>
         <footer id="footer"></footer>
         </div>
