--- a/views/includes/shifts.ejs
+++ b/views/includes/shifts.ejs
@@ -39,7 +39,7 @@
                                 <option value="0" <%= (val[2] == 0)?'selected':'' %>>AM</option>
                                 <option value="1" <%= (val[2] == 1)?'selected':'' %>>PM</option>
                             </select>
-                            <h3> TO </h3>
+                            <span> TO </span>
                             <label for="<%dayAvail[day]%>End">
                             <select id="<%- dayAvail[day]%>HoursEnd"  name="<%- dayAvail[day]%>HoursEnd">
                                 <option value="0" <%= (val[3] == 0)?'selected':'' %>>12</option>
