--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -11,7 +11,7 @@
       <a class="nav-item nav-link" href="/about">About</a>
       <a class="nav-item nav-link" href="/help">Help</a>
       <% if(loggedIn == true){ %>
-        <a class="nav-item nav0link" href="/logout">Logout</a>
+        <a class="nav-item nav-link" href="/logout">Logout</a>
       <% } %>
     </div>
   </div>
