--- a/views/groupPage.ejs
+++ b/views/groupPage.ejs
@@ -26,6 +26,7 @@
                 </div>
             </div>
             <% } else { %>
+            <a href="/employer/group/schedule"> generate schedule<a>
             <div class="full row">
                 <div class="leftHalf col-sm sol-md col-ls">
                     <%- include('includes/employerLeft.ejs')%>
