--- a/views/includes/employerRight.ejs
+++ b/views/includes/employerRight.ejs
@@ -5,6 +5,8 @@
         <%- include('./head.ejs') %>
     </head>
     <!--/body-->
+    <div class="a">
+
     <body>
         <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->
 
@@ -25,4 +27,5 @@
         </main>
         <footer id="footer"></footer>
     </body>
+    </div>
 </html>
