basic schedule page shows names
shows names of the employees that are in the group, dynamic according to the amount of employees in the group

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -8,5 +8,9 @@
 
         <body class="text-center">
         <p>This is just a test page, will put content here after we figure out DB issues</p>
+
+        <% for(var x in employeeList){ %>
+            <p>Name: <%= employeeList[x].name %></p>
+       <% } %>
     </body>
 </html>
