--- a/views/includes/employeeRight.ejs
+++ b/views/includes/employeeRight.ejs
@@ -17,7 +17,7 @@
                         <label for="<% dayAvail[i] %>Start ">
                             <span><%- days[i]%></span>
                             <%const val = selectedFormat(employee[dayAvail[i]])%>
-                            <select  id="<%- dayAvail[i]%>HoursStart" selected='<%- employee[dayAvail[i]][0] %>' name='<%- dayAvail[i]%>HoursStart' >
+                            <select  id="<%- dayAvail[i]%>HoursStart" name='<%- dayAvail[i]%>HoursStart' >
                                 <option value="0" <%= (val[0] == 0)?'selected':'' %>>12</option>
                                 <option value="100" <%= (val[0] == 100)?'selected':'' %>>1</option>
                                 <option value="200" <%= (val[0] == 200)?'selected':'' %>>2</option>
@@ -32,19 +32,19 @@
                                 <option value="1100" <%= (val[0] == 1100)?'selected':'' %>>11</option>
                             </select>
                             <span>:</span>
-                            <select id="<%- dayAvail[i]%>MinutesStart" selected='<%-  employee[dayAvail[i]][1] %>' name="<%- dayAvail[i]%>MinutesStart">
+                            <select id="<%- dayAvail[i]%>MinutesStart" name="<%- dayAvail[i]%>MinutesStart">
                                 <option value="0" <%= (val[1] == 0)?'selected':'' %>>00</option>
                                 <option value="25" <%= (val[1] == 25)?'selected':'' %>>15</option>
                                 <option value="50" <%= (val[1] == 50)?'selected':'' %>>30</option>
                                 <option value="75" <%= (val[1] == 75)?'selected':'' %>>45</option>
                             </select>
-                            <select id="<%- dayAvail[i]%>HalfStart" selected='<% employee[dayAvail[i]][2] %>' name="<%- dayAvail[i]%>HalfStart">
+                            <select id="<%- dayAvail[i]%>HalfStart" name="<%- dayAvail[i]%>HalfStart">
                                 <option value="0" <%= (val[2] == 0)?'selected':'' %>>AM</option>
                                 <option value="1200" <%= (val[2] == 1200)?'selected':'' %>>PM</option>
                             </select>
                             <span> TO </span>
                             <label for="<%- dayAvail[i]%>End">
-                            <select id="<%- dayAvail[i]%>HoursEnd" selected='<%-  employee[dayAvail[i]][3] %>' name="<%- dayAvail[i]%>HoursEnd">
+                            <select id="<%- dayAvail[i]%>HoursEnd" name="<%- dayAvail[i]%>HoursEnd">
                                 <option value="0" <%= (val[3] == 0)?'selected':'' %>>12</option>
                                 <option value="100" <%= (val[3] == 100)?'selected':'' %>>1</option>
                                 <option value="200" <%= (val[3] == 200)?'selected':'' %>>2</option>
@@ -59,13 +59,13 @@
                                 <option value="1100" <%= (val[3] == 1100)?'selected':'' %>>11</option>
                             </select>
                             <span>:</span>
-                            <select id="<%- dayAvail[i]%>MinutesEnd" selected='<%-  employee[dayAvail[i]][4] %>' name="<%- dayAvail[i]%>MinutesEnd">
+                            <select id="<%- dayAvail[i]%>MinutesEnd"  name="<%- dayAvail[i]%>MinutesEnd">
                                 <option value="0" <%= (val[4] == 0)?'selected':'' %>>00</option>
                                 <option value="25" <%= (val[4] == 25)?'selected':'' %>>15</option>
                                 <option value="50" <%= (val[4] == 50)?'selected':'' %>>30</option>
                                 <option value="75" <%= (val[4] == 75)?'selected':'' %>>45</option>
                             </select>
-                            <select id="<%- dayAvail[i]%>HalfEnd" selected='<%-  employee[dayAvail[i]][5] %>' name="<%- dayAvail[i]%>HalfEnd">
+                            <select id="<%- dayAvail[i]%>HalfEnd" name="<%- dayAvail[i]%>HalfEnd">
                                 <option value="0" <%= (val[5] == 0)?'selected':'' %>>AM</option>
                                 <option value="1200" <%= (val[5] == 1200)?'selected':'' %>>PM</option>
                             </select>
