--- a/views/groupPage.ejs
+++ b/views/groupPage.ejs
@@ -26,8 +26,9 @@
                 </div>
             </div>
             <% } else { %>
-            <a href="/employer/group/schedule"> generate schedule<a><br>
-            <a href="/employer/group/employer">test view for schedule</a>
+            <form action='/employer/group/schedule'>
+                <input type='submit' value='Generate Schedule'/>
+            </form>
             <div class="full row">
                 <div class="leftHalf col-sm sol-md col-ls">
                     <%- include('includes/employerLeft.ejs')%>
