fixed logo image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
         <body class="text-center">
         <form action="/login" method="post" class="form-signin">
-            <img src="../resources/1.jpg" alt="SmartBoss" height="200" width="200">
+            <img src="../resources/1.png" alt="SmartBoss" height="200" width="200">
 
             <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
             <label for="uname" class="sr-only">Username</label>
