--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
         <div class="a">
 
         <main id='profile'>
-            <img class="mb-4" src="../resources/1.jpg" alt="" width="72" height="72">
+            <img class="mb-4" src="../resources/1.png" alt="" width="72" height="72">
             <h1>Smart Boss</h1>
             <h2>Welcome <%- name %></h2>
             <br />
