Changes to Resources and views
J

--- a/views/help.ejs
+++ b/views/help.ejs
@@ -5,15 +5,38 @@
     <%- include('includes/head.ejs') %>
 </head>
 
+
 <body>
 <!--/navigation-bars to know more about the company, contact details, cart of the user and the product details of the selected product-->   
     <%- include('includes/nav.ejs') %>
     <div class="a">
 
 	  <div id="contact-page" class="container">
+
+        
     	<p>
-            If you want a summary about what this website is about, click on the home tab. The home page will allow you to either sign up or sign in. If you want to know more about this website and its creaters, click on the "About Us" tab.
-            at this time we are still working on the help Page. 
+            The home page will allow you to either sign up or sign in.  
+        </p> 
+        <p>
+            Our group's objective is to make a scheduling application for employers and employees. Scheduling people to come into work can be hard on both the employee being scheduled and the employer trying to find people that can work. Smart Boss is designed to help fix this issue by giving employees and employers an easier way to get scheduled for work. The application aims towards making it easy for multiple different stakeholders to have concise and fast schedules without having too much work. Our main objective is to cut time down and make everyone's life easier by having the Smart Boss scheduler help lift the load off.
+            Our primary stakeholders include Carolinas Christian assembly and team Smart Boss. Smart Boss application can be used by multiple different stakeholders such as:   
+            Churches  have been our main group to focus on.
+
+            
+        </p>
+            <p>  
+            Healthcare such as hospitals 
+            Education centers 
+            Events such as sporting events 
+            Logistics such as warehouse 
+            When sprint 2 was completed, we were able to address most of the problems that were brought up with the stakeholders and fix them to our stakeholders' likings.
+        </p>
+        <p> 
+            If you are logged in as an employee, you can then either add a job or enter a job’s page. Once you enter the job page you are able to choose different skills to add or remove. You can also update your availability.
+            If you are logged in as an employer, you can create a job or enter a job’s page. Once you enter you can see a skill creation area and the ability to update or remove a skill. If you click on update it brings up the skill page which lets you change the skill name, description, and the shifts for the skill. Then back at the job page again you can see all the employees in the job and you can also generate a schedule by clicking on the generate schedule button. Then the router brings you through all the days so you can schedule your employees. After you are done it is emailed and you end back up at the employer page.
+            
+            
+        
         </p>  
     	</div>	
     </div>
